video-processing-platform/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: video-backend-pod
  labels:
    app: video-backend
spec:
  containers:
    - name: backend
      image: video-processing-platform-backend:latest
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8000
      resources:
        requests:
          cpu: "250m"
          memory: "256Mi"
        limits:
          cpu: "500m"
          memory: "512Mi"
